--- a/BiggerCrewQuarters.csproj
+++ b/BiggerCrewQuarters.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>BiggerCrewQuarters</AssemblyName>
     <Description>Doubles the crew housing.</Description>
-    <Version>0.0.4</Version>
+    <Version>0.1.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
@@ -26,11 +26,15 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="BulwarkStudios.Stanford">
-      <HintPath>..\..\..\Steam\steamapps\common\IXION\BepInEx\interop\BulwarkStudios.Stanford.dll</HintPath>
+      <HintPath>..\..\..\Steam\steamapps\common\IXION\BepInEx\unhollowed\BulwarkStudios.Stanford.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Il2Cppmscorlib">
-      <HintPath>..\..\..\Steam\steamapps\common\IXION\BepInEx\interop\Il2Cppmscorlib.dll</HintPath>
+      <HintPath>..\..\..\Steam\steamapps\common\IXION\BepInEx\unhollowed\Il2Cppmscorlib.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnhollowerBaseLib">
+      <HintPath>..\..\..\Steam\steamapps\common\IXION\BepInEx\core\UnhollowerBaseLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
